tests/ui/consts/const-eval/validation-ice-extern-type-field.stderr
error[E0080]: `extern type` field does not have a known offset
  --> $DIR/validation-ice-extern-type-field.rs:12:1
   |
LL | const C1: &ThinDst = unsafe { std::mem::transmute(b"d".as_ptr()) };
   | ^^^^^^^^^^^^^^^^^^ evaluation of constant value failed here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
